--- a/laraProj_RentAdvisor/public/css/style.css
+++ b/laraProj_RentAdvisor/public/css/style.css
@@ -2580,6 +2580,10 @@ img {
 #aa-signin .aa-signin-area .aa-signin-form .aa-single-field label .required {
   color: #f60000;
 }
+
+.richiesta {
+    color: #f60000;
+}
 #aa-signin .aa-signin-area .aa-signin-form .aa-single-field input[type="text"],
 #aa-signin .aa-signin-area .aa-signin-form .aa-single-field input[type="email"],
 #aa-signin .aa-signin-area .aa-signin-form .aa-single-field input[type="password"] {
