--- a/laraProj_RentAdvisor/public/css/style.css
+++ b/laraProj_RentAdvisor/public/css/style.css
@@ -2514,6 +2514,7 @@ img {
 #aa-signin {
   background-position: center center;
   background-size: cover;
+  background-image: url("../images/slider/Pescara.png");
   bottom: 0;
   height: 100%;
   left: 0;
@@ -2764,7 +2765,12 @@ img {
   resize: none;
 }
 
-
+#properties-title {
+  margin: 0 0 20px;
+  border-top: 1px rgb(0, 0, 0) solid;
+  border-left: 1px rgb(0, 0, 0) solid;
+  border-right: 1px rgb(0, 0, 0) solid;
+}
 
 
 
