--- a/laraProj_RentAdvisor/public/css/style.css
+++ b/laraProj_RentAdvisor/public/css/style.css
@@ -573,7 +573,7 @@ img {
   }
 #aa-advance-search .aa-advance-search-area {
   background-color: rgba(221, 221, 221, 0.8);
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 10px;
   display: inline;
   float: left;
   margin-top: -100px;
@@ -2402,6 +2402,36 @@ img {
   border-top: 1px rgb(0, 0, 0) solid;
   border-left: 1px rgb(0, 0, 0) solid;
   border-right: 1px rgb(0, 0, 0) solid;
+}
+
+
+.button-reminder {
+  position: absolute;
+  top:50%;
+  background-color:#ff7f50;
+  color: #fff;
+  border:none; 
+  border-radius:10px; 
+  padding:15px;
+  margin-top:15px;
+  min-height:30px; 
+  min-width: 120px;
+}
+
+.button-reminder:active {
+  background-color: #ffbf00;
+}
+
+.button-reminder:focus {
+  outline-color: transparent;
+  outline-style:solid;
+  box-shadow: 0 0 0 4px #5a01a7;
+  transition: 0.7s;
+}
+
+.button-reminder:hover {
+  background-color:#002ead;
+  transition: 0.7s;
 }
 
 /*==================
